<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.add.AddUserFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        style="@style/SemiboldBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_title"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"
        style="@style/RegularBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/add_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        style="@style/Medium"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_gray"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:lines="1"
        android:paddingStart="16dp"
        android:textColorHint="@color/gray_81"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_et_name_label"
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/name"
        android:textColor="@color/gray_81"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toTopOf="@id/et_name"
        tools:ignore="SmallSp"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_surname"
        style="@style/Medium"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_gray"
        android:hint="@string/surname"
        android:inputType="textCapSentences"
        android:lines="1"
        android:paddingStart="16dp"
        android:textColorHint="@color/gray_81"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_et_surname_label"
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/surname"
        android:textAllCaps="false"
        android:textColor="@color/gray_81"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_surname"
        app:layout_constraintTop_toTopOf="@id/et_surname"
        tools:ignore="SmallSp"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        style="@style/Button.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:paddingBottom="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>