<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingBottom="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/indicator"
        android:layout_width="35dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/swipe_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_bsheet_delete_users_title"
        style="@style/SemiboldLightBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/bsheet_delete_user_title"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_bsheet_delete_users_description"
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/bsheet_delete_user_description"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bsheet_delete_users_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Button.Big"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/bsheet_delete_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bsheet_delete_users_description" />

</androidx.constraintlayout.widget.ConstraintLayout>